--- a/c-in-a-nutshell/ch10/ch10-结构、联合与位字段.md
+++ b/c-in-a-nutshell/ch10/ch10-结构、联合与位字段.md
@@ -53,6 +53,7 @@ struct B{ struct A *pA;};
 因此较大的结构对象的传参通常使用传地址的方式。
 
 ### 初始化特定成员
+
 C99 允许 结构初始化时也可以指定对应的字段名称。通过成员指示符来实现(member designator)
 例如:
 
@@ -61,9 +62,46 @@ Singer chou = {.name = "周杰伦",.gender = 'm'};
 ```
 
 ### 内存中的结构成员
+
 在结构定义时声明的各成员的顺序，就是对应的结构对象成员在内存中的存储有顺序。第一个成员的地址就是结构对象本身的地址，声明的有顺序越往后，地址越大。
 
 可以通过宏 `offsetof` 来获取 成员地址与结构对象的起始地址之间的偏差。
 编译器可能会在结构的最后一个成员后面补充额外的字节，该过程通常称之为(padding),所以无论何时都应该使用 `sizeof` 来得到结构空间的大小。
 
 有时为了与硬件接口一致也可以人为地控制编译器对结构成员的对齐方式（例如避免成员之间的内存间隙）
+
+## 联合
+
+联合的定义方式跟结构是一样的的。只是把关键字由`struct` 变成了 `union`
+因此一些共性的东西可以参考结构的定义的相关语法。
+联合相当于一个可变类型变量，联合声明的各个字段是其各个可能的类型， 联合的空间大小为其最大成员的空间大小。
+
+## 匿名结构与联合
+
+匿名结构与联合是 C11 中的新的特性，它允许定义结构和联合类型时具有更大的灵活性。如果一个结构或者联合在定义时未命名结构成员或者未指定标签名称，则称为匿名结构或联合。
+例如计算机术语中一个字节是 8 位，一个字是 16 位。一个字的前 8 位称之为低字节，后 8 位可以称之为高字节。
+那么这个字的内存表示我们可以通过如下联合定义来表示。
+
+```c
+union Word
+{
+  int16_t word;
+  struct { int8_t low,high;}; //匿名结构 ， 因为一般是小端序，所以低字节在前
+};
+```
+
+```c
+union Word
+{
+  int16_t word;
+  struct { int8_t low,high;}; //因为一般是小端序，所以低字节在前
+};
+
+union Doubleword{
+  int32_t double_word;
+  struct{
+    union Word low;
+    union Word high;
+  };
+};
+```
