add(cnuts) 位字段笔记及测试代码

--- a/c-in-a-nutshell/ch10/ch10-结构、联合与位字段.md
+++ b/c-in-a-nutshell/ch10/ch10-结构、联合与位字段.md
@@ -105,3 +105,20 @@ union Doubleword{
   };
 };
 ```
+
+## 位字段
+
+结构或者联合的成员也可以是位字段。
+位字段(bit-field) 是一个由具有特定数量的位组成的整数变量，如果连续声明多个小的位字段，编译器会将它们合并成一个机器字组成的整型变量，这使得小单元信息具有更加紧凑的存储方式。
+
+位字段的声明格式如下：
+
+```js
+类型[成员名称]:宽度;
+```
+
+其中类型只能是以下 4 种：
+`unsigned int, signed int, int, _Bool`
+并且其值不能大于指定的位宽度。
+对于匿名位字段用于填充(padding), 以帮助后续的位字段在机器字中对齐到特定的地址边界。
+如果紧接着的位字段不适合同一内存单元的剩余空间，那么编译器就会分配另外的内存单元。
